UNDO/REDO system is broken(Python handlers are swapped) #85054

Closed
opened 2021-01-25 19:10:59 +01:00 by Radu Popovici · 6 comments

Blender Version
Broken: 2.93, Alpha latest build cf6d17a6aa
Worked: 2.92

Steps to reproduce:

  1. Start blender
  2. Run the test file attached
  3. Create a new cylinder
  4. Change values..
  5. The undo handler is called instead of redo
  6. Same problem with undo..
  7. Press Ctrl+Z
  8. Redo handler is called..

The UNDO/REDO python handlers are swapped. Why?

Test file:
undo_redo_handles_bug.blend

**Blender Version** Broken: 2.93, Alpha latest build cf6d17a6aa42 Worked: 2.92 Steps to reproduce: 1. Start blender 2. Run the test file attached 3. Create a new cylinder 4. Change values.. 5. The undo handler is called instead of redo 6. Same problem with undo.. 7. Press Ctrl+Z 8. Redo handler is called.. The UNDO/REDO python handlers are swapped. Why? Test file: [undo_redo_handles_bug.blend](https://archive.blender.org/developer/F9597293/undo_redo_handles_bug.blend)
Author

Added subscriber: @rpopovici

Added subscriber: @rpopovici
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Falk David self-assigned this 2021-01-25 21:59:55 +01:00
Member

I can confirm this on master and 2.92 beta. Investigating...

I can confirm this on master and 2.92 beta. Investigating...

This issue was referenced by 6249995c5e

This issue was referenced by 6249995c5ebb65127daae6fa235b7db9d26c9950

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85054
No description provided.