Fix T85054: undo/redo app handlers broken

Regression in recent commit c13383da416c9c99d03058caaf66c736af0272cb
which swapped undo/redo when calling the handlers.

Ref D10200